force-app/main/default/objects/Report_Accessibility__c/Report_Accessibility__c.object-meta.xml
<CustomObject>
    <label>Report Accessibility</label>
    <nameField>
        <label>Report Access Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Report Accessibilities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>