force-app/main/default/objects/Report_Accessibility__c/fields/Custom_Report__c.field-meta.xml
<CustomField>
    <fullName>Custom_Report__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Custom Report</label>
    <referenceTo>Custom_Report__c</referenceTo>
    <relationshipLabel>Report Accessibilities</relationshipLabel>
    <relationshipName>Report_Accessibilities_del</relationshipName>
    <type>Lookup</type>
</CustomField>