force-app/main/default/objects/Report_Accessibility__c/fields/Mileage_Lock_Date__c.field-meta.xml
<CustomField>
    <fullName>Mileage_Lock_Date__c</fullName>
    <label>Mileage Lock Date</label>
    <length>20</length>
    <type>Text</type>
</CustomField>