force-app/main/default/objects/Report_Accessibility__c/fields/Report_User_Name__c.field-meta.xml
<CustomField>
    <fullName>Report_User_Name__c</fullName>
    <label>Report User Name</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>